--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homepage</title>
+</head>
+<body>
+    <h1>Homer Ayuste</h1>
+    <p>Hi! My name is Homer and I am a recent Computer Science graduate from Wilfrid Laurier University.</p>
+</body>
+</html>
