--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Homer Ayuste</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Homer Ayuste</h1>
